# cielmalloc

./: CMakeLists.txt  Makefile  README.md  ThirdPartyNotices.txt
.github/workflows/: unit_test.yml
include/ciel/: config.h  headquarter_alloc.h  malloc.h  message_queue.h  remote_request.h  sizeclass.h  span.h  system.h  thread_alloc.h  thread_alloc_core.h  treiber_stack.h
include/cielmalloc/: aal.hpp  bits.hpp  buddy.hpp  commit_range.hpp  config.hpp  global_allocator.hpp  interface.hpp  large_buddy_range.hpp  large_slab.hpp  list.hpp  lock_range.hpp  log_range.hpp  malloc.cpp  medium_slab.hpp  pagemap.hpp  pagemap_register_range.hpp  pal.hpp  pool.hpp  range.hpp  remote_allocator.hpp  reserve_range.hpp  sizeclass.hpp  slab.hpp  small_buddy_range.hpp  small_slab.hpp  stats_range.hpp  thread_allocator.hpp
include/cielmalloc/aal/: arm.hpp  flag.hpp  x86.hpp
include/cielmalloc/pal/: apple.hpp  debug.hpp  flag.hpp  linux.hpp  posix.hpp
include/cielmalloc/range/: commit_range.hpp  lock_range.hpp  reserve_range.hpp
src/: config.cpp  headquarter_alloc.cpp  malloc.cpp  message_queue.cpp  remote_request.cpp  sizeclass.cpp  span.cpp  system.cpp  thread_alloc.cpp  thread_alloc_core.cpp  treiber_stack.cpp
test/: CMakeLists.txt  test.cpp
test/src/: bits.cpp  buddy.cpp  large_alloc.cpp  medium_alloc.cpp  medium_slab.cpp  pagemap.cpp  pool.cpp  range.cpp  sizeclass.cpp  small_alloc.cpp  tools.hpp
